Fix overflow in blog-page

--- a/src/styles/components/_article-card.scss
+++ b/src/styles/components/_article-card.scss
@@ -7,17 +7,16 @@
   border-radius: 20px;
   box-shadow: 0px 4px 30px rgba(29, 57, 95, 0.05);
   position: relative;
-  height: 406px;
   @include card-hover;
 
   &__tag {
-    width: 64px;
     height: 40px;
     border-radius: 100px;
     font-weight: $fw-medium;
     font-size: $fz-sm;
     line-height: $lh-base;
     position: absolute;
+    padding: $space-base;
     left: 36px;
     top: 270px;
   }
