--- a/src/styles/components/_article.scss
+++ b/src/styles/components/_article.scss
@@ -50,6 +50,7 @@
   &__img-link {
     font-weight: $fw-semibold;
     color: $color-primary;
+    white-space: nowrap;
     @include link-style;
   }
 
