--- a/src/styles/components/_related-articles.scss
+++ b/src/styles/components/_related-articles.scss
@@ -45,6 +45,7 @@
     display: flex;
     align-items: center;
     gap: $gap-sm;
+    white-space: nowrap;
   }
 
   &__icon {
